--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "express": "^4.17.3",
     "pg": "^8.8.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-bootstrap": "^2.7.0",
+    "react-dom": "^17.0.2",
+    "react-spring": "^9.5.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
